feat(powerline): 更新塔结构预览渲染器支持材质配色
- 在 BlockPreviewColors 中添加 MaterialMix 支持
- 移除 spruce_fence 的硬编码颜色映射
- 添加基于 MaterialMix 的预览颜色方法
- 在 TowerStructuralElevationRenderer 中引入 StructuralPalette
- 为塔结构的不同组件（腿、支撑、横担）实现材质感知配色
- 添加对塔装饰（天线、信